# libthing-rs

./: .gitignore  Package.swift  README.md  flake.nix
.swiftpm/xcode/xcuserdata/sirimhrzn.xcuserdatad/xcschemes/: xcschememanagement.plist
android/: settings.gradle.kts
android/calendar-core/: build.gradle.kts
android/calendar-core/src/main/kotlin/uniffi/calendarcore/: calendarcore.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
apple/calendarcore/: calendarcore.swift
common/: Cargo.toml  build_android.nu  build_ios.nu  build_wasm.nu
common/calendarcore/: Cargo.toml
common/calendarcore/src/: app.rs  calendar.rs  dates.rs  db.rs  error.rs  lib.rs
common/uniffi-bindgen-swift/: Cargo.toml
web-js/: calendarcore.d.ts  calendarcore.js  calendarcore_bg.wasm  calendarcore_bg.wasm.d.ts
