[package]
name = "calendarcore"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
jiff = "0.2.15"
once_cell = "1.21.3"
thiserror = "2.0.16"

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"]}
uniffi = { workspace = true}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"
tsify = { version = "0.5.5", features = ["js"] }
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "calendarcore"
